force-app/main/default/objects/Contact/fields/Prequalified__c.field-meta.xml
<CustomField>
    <fullName>Prequalified__c</fullName>
    <label>Prequalified ?</label>
    <length>18</length>
    <type>Text</type>
</CustomField>