force-app/main/default/objects/Contact/validationRules/birthday.validationRule-meta.xml
<ValidationRule>
    <fullName>birthday</fullName>
    <active>true</active>
    <description>birthday should not be greater than today</description>
    <errorConditionFormula>Birthdate  &gt;  TODAY()</errorConditionFormula>
    <errorMessage>birthday should not be greater than today</errorMessage>
</ValidationRule>