force-app/main/default/objects/Contact/validationRules/First_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Required</fullName>
    <active>true</active>
    <description>first name is required</description>
    <errorConditionFormula>ISBLANK(FirstName)  ||  ISBLANK(Phone)  ||  ISBLANK( Email )</errorConditionFormula>
    <errorMessage>first name, phone and email cannot be null</errorMessage>
</ValidationRule>